--- a/API_saveData/API_saveDataToCsv_optimized.ipynb
+++ b/API_saveData/API_saveDataToCsv_optimized.ipynb
@@ -73,12 +73,13 @@
     "      'Authorization': 'Basic UmVzdHVzZXI6S2VubndvcnQwNA==',\n",
     "      'Cookie': 'JSESSIONID=AAC2EFBE19BC028C7CE932443375F13B'\n",
     "    }\n",
+    "\n",
     "for entry in specifiedObjectsAndMethods():\n",
     "    # send request, get response\n",
     "    url_data = \"http://10.50.12.131:8080/data/\" + str(entry[0]) + \"/\" + str(entry[1])\n",
     "    response_data = requests.request(\"GET\", url_data, headers=headers_data)\n",
     "    response_json_data = json.loads(response_data.text)\n",
-    "    \n",
+    "\n",
     "    if(response_json_data):\n",
     "        # get metainfos\n",
     "        metainfos = response_json_data[0]\n",
@@ -88,14 +89,15 @@
     "            metadata = metainfos['data']\n",
     "            metadatalist = []\n",
     "            for col in metadata:\n",
-    "                metadatalist.append(col['name'])\n",
+    "                metadatalist.append(col['name'] + \"|\" + col['type'])\n",
     "\n",
-    "            # new DataFrame, save response content to df and save df content to csv\n",
-    "            df = pd.DataFrame(columns=metadatalist)\n",
-    "            for key, row in enumerate(response_json_data):\n",
+    "            data_toSave = []\n",
+    "            data_toSave.append(metadatalist)\n",
+    "\n",
+    "            for row in response_json_data:\n",
     "                if row['__rowType'] == 'DATA':\n",
-    "                    df.loc[key] = row['data']\n",
-    "            df.to_csv(\"apidata/\" + str(entry[0]) + \"_\" + str(entry[1]) + \"_\" + str(datatype) + \".csv\", sep=';', header=True, index=False)\n",
+    "                    data_toSave.append(row['data'])\n",
+    "            np.savetxt(\"apidata/\" + str(entry[0]) + \"_\" + str(entry[1]) + \"_\" + str(datatype) + \".csv\", data_toSave, delimiter=\";\", fmt='%s')\n",
     "\n",
     "            counter+=1\n",
     "            print(str(entry[0]) + \"_\" + str(entry[1]) + \": \" + str(counter))\n",
