--- a/API_Inspection/API_Inspection.ipynb
+++ b/API_Inspection/API_Inspection.ipynb
@@ -18,6 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# api connect\n",
     "url_meta = \"http://10.50.12.131:8080/meta/\"\n",
     "headers_meta = {\n",
     "  'Authorization': 'Basic UmVzdHVzZXI6S2VubndvcnQwNA==',\n",
@@ -33,8 +34,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# save all domains and services as json\n",
     "import json\n",
-    "with open('allClassesAndMethods.json', 'w') as outfile:\n",
+    "with open('allDomainsAndServices.json', 'w') as outfile:\n",
     "    json.dump(response_json_meta, outfile)"
    ]
   },
@@ -47,13 +49,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Anzahl Einträge in Response: 2656\n"
+      "Anzahl Einträge in Api-Response '/meta': 2656\n"
      ]
     }
    ],
    "source": [
-    "# count class.method\n",
-    "print(\"Anzahl Einträge in Response: {0}\".format(len(response_json_meta)))"
+    "# count domain.service\n",
+    "print(\"Anzahl Einträge in Api-Response '/meta': {0}\".format(len(response_json_meta)))"
    ]
   },
   {
@@ -65,23 +67,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Anzahl verschiedener Klassen: 526\n"
+      "Anzahl verschiedener Domains: 526\n"
      ]
     }
    ],
    "source": [
-    "# count classes\n",
-    "classes = []\n",
+    "# count domains\n",
+    "domains = []\n",
     "for entry in response_json_meta:\n",
     "    split = entry.split('.')\n",
-    "    classes.append(split[0])\n",
+    "    domains.append(split[0])\n",
     "# remove duplicates:\n",
-    "classes = list(dict.fromkeys(classes))\n",
-    "print(\"Anzahl verschiedener Klassen: {0}\".format(len(classes)))\n",
+    "domains = list(dict.fromkeys(domains))\n",
+    "print(\"Anzahl verschiedener Domains: {0}\".format(len(domains)))\n",
     "\n",
     "import json\n",
-    "with open('allClasses.json', 'w') as outfile:\n",
-    "    json.dump(classes, outfile)"
+    "with open('allDomains.json', 'w') as outfile:\n",
+    "    json.dump(domains, outfile)"
    ]
   },
   {
@@ -93,24 +95,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Anzahl verschiedener Methoden: 422\n"
+      "Anzahl verschiedener Services: 422\n"
      ]
     }
    ],
    "source": [
-    "# count methods\n",
-    "methods = []\n",
+    "# count services\n",
+    "services = []\n",
     "for entry in response_json_meta:\n",
     "    split = entry.split('.')\n",
-    "    methods.append(split[1])\n",
+    "    services.append(split[1])\n",
     "# remove duplicates:\n",
-    "methods = list(dict.fromkeys(methods))\n",
-    "methods.sort()\n",
-    "print(\"Anzahl verschiedener Methoden: {0}\".format(len(methods)))\n",
+    "services = list(dict.fromkeys(services))\n",
+    "services.sort()\n",
+    "print(\"Anzahl verschiedener Services: {0}\".format(len(services)))\n",
     "\n",
     "import json\n",
-    "with open('allMethods.json', 'w') as outfile:\n",
-    "    json.dump(methods, outfile)"
+    "with open('allServices.json', 'w') as outfile:\n",
+    "    json.dump(services, outfile)"
    ]
   },
   {
@@ -119,23 +121,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# count frequency of methods\n",
-    "methods = []\n",
+    "# count frequency of services\n",
+    "services = []\n",
     "for entry in response_json_meta:\n",
     "    split = entry.split('.')\n",
-    "    methods.append(split[1])\n",
+    "    services.append(split[1])\n",
     "    \n",
     "from collections import Counter\n",
-    "d = Counter(methods)\n",
+    "d = Counter(services)\n",
     "\n",
-    "methodslist, frequencies = d.keys(), d.values()\n",
+    "serviceslist, frequencies = d.keys(), d.values()\n",
     "\n",
-    "pairs = list(zip(frequencies, methodslist))\n",
+    "pairs = list(zip(frequencies, serviceslist))\n",
     "pairs.sort(key=lambda tup: tup[0], reverse=True)\n",
-    "pairs\n",
     "\n",
     "import json\n",
-    "with open('methodsWithCounter.json', 'w') as outfile:\n",
+    "with open('servicesWithCounter.json', 'w') as outfile:\n",
     "    json.dump(pairs, outfile)"
    ]
   },
@@ -148,23 +149,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Anzahl Kombination Klasse und list/list...-Methoden: 548\n"
+      "Anzahl Kombination Domain und list/list...-Services: 548\n"
      ]
     }
    ],
    "source": [
-    "# count classes with 'list' or 'list...'\n",
-    "classesAndMethodsWithList = []\n",
+    "# count domains with 'list' or 'list...'\n",
+    "domainsAndServicesWithList = []\n",
     "for entry in response_json_meta:\n",
     "    split = entry.split('.')\n",
     "    if(split[1][ 0 : 4 ] == 'list'):\n",
-    "        classesAndMethodsWithList.append(split)\n",
-    "print(\"Anzahl Kombination Klasse und list/list...-Methoden: {0}\".format(len(classesAndMethodsWithList)))\n",
-    "classesAndMethodsWithList\n",
+    "        domainsAndServicesWithList.append(split)\n",
+    "print(\"Anzahl Kombination Domain und list/list...-Services: {0}\".format(len(domainsAndServicesWithList)))\n",
     "\n",
     "import json\n",
-    "with open('classesAndMethodsWithList.json', 'w') as outfile:\n",
-    "    json.dump(classesAndMethodsWithList, outfile)"
+    "with open('domainsAndServicesWithList.json', 'w') as outfile:\n",
+    "    json.dump(domainsAndServicesWithList, outfile)"
    ]
   }
  ],
